[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "marsfan_py_tools"

dynamic = ["version"]
authors = [
    { name = "Gabriel Roper", email = "9311953+marsfan@users.noreply.github.com" },
]
description = "A collection of small tools I use when working with python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
license = "MPL-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/marsfan/marssfan_py_tools"
Issues = "https://github.com/marsfan/marssfan_py_tools/issues"

[project.scripts]
py-update = "marsfan_py_tools.py_update:main"

[tool.setuptools.dynamic]
version = { attr = "marsfan_py_tools.__version__" }
